--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "react-dom": "^17.0.1",
         "react-leaflet": "^3.0.2",
         "react-scripts": "4.0.1",
+        "use-global-hook": "^0.2.1",
         "web-vitals": "^0.2.4"
     },
     "scripts": {
